--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rahul/matrix",
+    "name": "rahul94/matrix",
     "description": "Testing Package Descrption",
     "type": "composer-plugin",
     "license": "MIT",
